css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
$base-font-size:   16px;
$base-font-weight: 400;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;



// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "layout",
        "syntax-highlighting"
;

.logo {
  max-width: 50px;
  max-height: 20px;
  display: float;
}
.logo img {
  max-width: 100px;
  max-height: 20px;
  float: left;
}

.home .page-heading {
  color: #6E0DD6;
}
.post-list {
  color: #074CBA;
}
.post-list a {
  color: #0ac920;
}

footer {
  bottom: fixed;
  color: #E30522;
}

nav {
    background:#999;
}

.wrapper {
    background-color: #fdfdfd;
    background-repeat: repeat;
}

